// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arbitrary properties [--scroll-offset:56px] lg:[--scroll-offset:44px] 1`] = `
"<div class=\\"_l_--scroll-offset_c_56px_r_ lg_c__l_--scroll-offset_c_44px_r_\\">
      <!-- ... -->
    </div>"
`;

exports[`arbitrary properties [mask-type:luminance] 1`] = `
"<div class=\\"_l_mask-type_c_luminance_r_\\">
      <!-- ... -->
    </div>"
`;

exports[`arbitrary properties [mask-type:luminance] hover:[mask-type:alpha] 1`] = `
"<div class=\\"_l_mask-type_c_luminance_r_ hover_c__l_mask-type_c_alpha_r_\\">
      <!-- ... -->
    </div>"
`;
